--- a/MaterialApoio/styles.css
+++ b/MaterialApoio/styles.css
@@ -168,3 +168,52 @@ button {
 button:hover {
     background-color: #0056b3; /* Azul mais escuro ao passar o mouse */
 }
+
+.tabela-usuarios {
+    width: 70%;
+    border-collapse: collapse;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 20px;
+    border: 1px solid #ccc;
+  }
+  
+  /* Cabeçalho */
+  .tabela-usuarios th {
+    background: #063883;
+    color: #fff;
+    padding: 12px;
+    text-align: left;
+    font-weight: 600;
+    border: 1px solid #ccc;
+  }
+  
+  /* Células */
+  .tabela-usuarios td {
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+    border: 1px solid #cccccc;
+  }
+  
+  /* Zebra */
+  .tabela-usuarios tr:nth-child(even) td {
+    background: #26398d;
+    color: #fff;
+  }
+  
+  /* Hover */
+  .tabela-usuarios tr:hover td {
+    background: #eef5ff;
+  }
+  
+  /* Links de ação */
+  .tabela-usuarios a {
+    margin-right: 8px;
+    text-decoration: none;
+    color: #0d6efd;
+    font-weight: 500;
+  }
+  
+  .tabela-usuarios a:hover {
+    text-decoration: underline;
+  }
+  
